--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body{
     margin: 2px;
     background: whitesmoke;
-    text-align: left;
+    text-align:left;
+    font-family: 'Roboto', sans-serif, color black;
 }
