--- a/styles.css
+++ b/styles.css
@@ -17,14 +17,20 @@ body{
 }
 /*#region Button*/
 button{
-    color: red;
-    size: 15px;
+    all:unset;
+    cursor:pointer;
+    transform: scale(0.25);
+    margin: -90px -90px;
+    transition: transform.3s;
 }
 button:hover{
-    size: 20px;
+    transform: scale(0.3);
+    overflow: hidden;
+    color: white;
 }
 button:active{
-    size: 10px;
-
+    transform:scale(0.15);
+    transition: transform.15s;
 }
+
 /*#endregion Button*/
